--- a/colab/automate_colab_editing.ipynb
+++ b/colab/automate_colab_editing.ipynb
@@ -94,9 +94,9 @@
     "   \"source\": [\n",
     "    \"import sys, os\\\\n\",\n",
     "    \"if 'google.colab' in sys.modules:\\\\n\",\n",
-    "    \"    if not os.path.isdir('Data'):\\\\n\",\n",
-    "    \"        !curl https://raw.githubusercontent.com/guiwitz/NumpyPandas_course/master/colab/colab_data.sh -o colab_data.sh\\\\n\",\n",
-    "    \"        !curl https://raw.githubusercontent.com/guiwitz/NumpyPandas_course/master/svg.py -o svg.py\\\\n\",\n",
+    "    \"    if not os.path.isdir('data'):\\\\n\",\n",
+    "    \"        !curl https://raw.githubusercontent.com/numpy_pandas/master/colab/colab_data.sh -o colab_data.sh\\\\n\",\n",
+    "    \"        !curl https://raw.githubusercontent.com/numpy_pandas/master/svg.py -o svg.py\\\\n\",\n",
     "    \"        !sh colab_data.sh\"\n",
     "   ]\n",
     "  },\\n\"\"\""
