--- a/01-numpy_arrays_creation.ipynb
+++ b/01-numpy_arrays_creation.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    if not os.path.isdir('Data'):\n",
+    "        !curl https://raw.githubusercontent.com/lcsp-iscap/master/colab/colab_data.sh -o colab_data.sh\n",
+    "        !curl https://raw.githubusercontent.com/lcsp-iscap/master/svg.py -o svg.py\n",
+    "        !sh colab_data.sh"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1152,27 +1166,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01-DA_Numpy_arrays_creation.ipynb   98-DA_Numpy_Solutions.ipynb\n",
-      "02-DA_Numpy_array_maths.ipynb       99-DA_Pandas_Exercises.ipynb\n",
-      "03-DA_Numpy_matplotlib.ipynb        99-DA_Pandas_Solutions.ipynb\n",
-      "04-DA_Numpy_indexing.ipynb          My_first_plot.png\n",
-      "05-DA_Numpy_combining_arrays.ipynb  SNSF_data.ipynb\n",
-      "06-DA_Pandas_introduction.ipynb     Untitled.ipynb\n",
-      "07-DA_Pandas_structures.ipynb       \u001b[34m__pycache__\u001b[m\u001b[m/\n",
-      "08-DA_Pandas_import.ipynb           ipyleaflet.ipynb\n",
-      "09-DA_Pandas_operations.ipynb       multiple_arrays.npz\n",
-      "10-DA_Pandas_combine.ipynb          my_saved_array.npy\n",
-      "11-DA_Pandas_splitting.ipynb        \u001b[34mraw.githubusercontent.com\u001b[m\u001b[m/\n",
-      "12-DA_Pandas_plotting.ipynb         svg.py\n",
-      "13-DA_Pandas_ML.ipynb               \u001b[34munused\u001b[m\u001b[m/\n",
-      "98-DA_Numpy_Exercises.ipynb\n"
+      "00-bootstrap.ipynb               11-pandas_splitting.ipynb\n",
+      "01-numpy_arrays_creation.ipynb   12-pandas_realworld.ipynb\n",
+      "02-numpy_array_maths.ipynb       98-numpy_Exercises.ipynb\n",
+      "03-numpy_matplotlib.ipynb        98-numpy_Solutions.ipynb\n",
+      "04-numpy_indexing.ipynb          99-pandas_Exercises.ipynb\n",
+      "05-numpy_combining_arrays.ipynb  99-pandas_Solutions.ipynb\n",
+      "06-pandas_introduction.ipynb     README.md\n",
+      "07-pandas_structures.ipynb       \u001b[34mbinder\u001b[m\u001b[m/\n",
+      "08-pandas_import_plotting.ipynb  \u001b[34mcolab\u001b[m\u001b[m/\n",
+      "09-pandas_operations.ipynb       \u001b[34mdata\u001b[m\u001b[m/\n",
+      "10-pandas_combine.ipynb          svg.py\n"
      ]
     }
    ],
@@ -1266,13 +1277,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scikit-image\n",
+      "  Downloading scikit_image-0.22.0-cp312-cp312-macosx_12_0_arm64.whl.metadata (13 kB)\n",
+      "Requirement already satisfied: numpy>=1.22 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-image) (1.26.4)\n",
+      "Collecting scipy>=1.8 (from scikit-image)\n",
+      "  Downloading scipy-1.12.0-cp312-cp312-macosx_12_0_arm64.whl.metadata (217 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m217.9/217.9 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting networkx>=2.8 (from scikit-image)\n",
+      "  Downloading networkx-3.2.1-py3-none-any.whl.metadata (5.2 kB)\n",
+      "Collecting pillow>=9.0.1 (from scikit-image)\n",
+      "  Downloading pillow-10.2.0-cp312-cp312-macosx_11_0_arm64.whl.metadata (9.7 kB)\n",
+      "Collecting imageio>=2.27 (from scikit-image)\n",
+      "  Downloading imageio-2.34.0-py3-none-any.whl.metadata (4.9 kB)\n",
+      "Collecting tifffile>=2022.8.12 (from scikit-image)\n",
+      "  Downloading tifffile-2024.2.12-py3-none-any.whl.metadata (31 kB)\n",
+      "Requirement already satisfied: packaging>=21 in /Users/luis.pinto/Library/Python/3.12/lib/python/site-packages (from scikit-image) (23.2)\n",
+      "Collecting lazy_loader>=0.3 (from scikit-image)\n",
+      "  Downloading lazy_loader-0.3-py3-none-any.whl.metadata (4.3 kB)\n",
+      "Downloading scikit_image-0.22.0-cp312-cp312-macosx_12_0_arm64.whl (13.3 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.3/13.3 MB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading imageio-2.34.0-py3-none-any.whl (313 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m313.4/313.4 kB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading lazy_loader-0.3-py3-none-any.whl (9.1 kB)\n",
+      "Downloading networkx-3.2.1-py3-none-any.whl (1.6 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m6.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading pillow-10.2.0-cp312-cp312-macosx_11_0_arm64.whl (3.3 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m6.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading scipy-1.12.0-cp312-cp312-macosx_12_0_arm64.whl (31.4 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m31.4/31.4 MB\u001b[0m \u001b[31m7.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading tifffile-2024.2.12-py3-none-any.whl (224 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m224.5/224.5 kB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: tifffile, scipy, pillow, networkx, lazy_loader, imageio, scikit-image\n",
+      "Successfully installed imageio-2.34.0 lazy_loader-0.3 networkx-3.2.1 pillow-10.2.0 scikit-image-0.22.0 scipy-1.12.0 tifffile-2024.2.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install scikit-image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import skimage.io\n",
     "\n",
-    "image = skimage.io.imread('https://upload.wikimedia.org/wikipedia/commons/f/fd/%27%C3%9Cbermut_Exub%C3%A9rance%27_by_Paul_Klee%2C_1939.jpg')"
+    "image = skimage.io.imread('images/image_1.jpg')"
    ]
   },
   {
@@ -1284,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1352,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1372,7 @@
        "dtype('uint8')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1392,7 @@
        "(584, 756, 3)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1421,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "oilprice = np.loadtxt('https://raw.githubusercontent.com/guiwitz/Rdatasets/master/csv/quantreg/gasprice.csv',\n",
+    "oilprice = np.loadtxt('data/gasprice.csv',\n",
     "          delimiter=',', usecols=range(2,3), skiprows=1)"
    ]
   },
@@ -1487,7 +1546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.12.2"
   },
   "nteract": {
    "version": "0.23.1"
