--- a/09-pandas_operations.ipynb
+++ b/09-pandas_operations.ipynb
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "compo_pd = pd.read_excel('Data/composers.xlsx')\n",
+    "compo_pd = pd.read_excel('data/composers.xlsx')\n",
     "compo_pd"
    ]
   },
