--- a/10-pandas_combine.ipynb
+++ b/10-pandas_combine.ipynb
@@ -120,7 +120,7 @@
     }
    ],
    "source": [
-    "composers1 = pd.read_excel('Data/composers.xlsx', index_col='composer',sheet_name='Sheet1')\n",
+    "composers1 = pd.read_excel('data/composers.xlsx', index_col='composer',sheet_name='Sheet1')\n",
     "composers1"
    ]
   },
@@ -212,7 +212,7 @@
     }
    ],
    "source": [
-    "composers2 = pd.read_excel('Data/composers.xlsx', index_col='composer',sheet_name='Sheet3')\n",
+    "composers2 = pd.read_excel('data/composers.xlsx', index_col='composer',sheet_name='Sheet3')\n",
     "composers2"
    ]
   },
@@ -672,7 +672,7 @@
     }
    ],
    "source": [
-    "composers1 = pd.read_excel('Data/composers.xlsx', index_col='composer',sheet_name='Sheet1')\n",
+    "composers1 = pd.read_excel('data/composers.xlsx', index_col='composer',sheet_name='Sheet1')\n",
     "composers1"
    ]
   },
@@ -745,7 +745,7 @@
     }
    ],
    "source": [
-    "composers2 = pd.read_excel('Data/composers.xlsx', index_col='composer',sheet_name='Sheet4')\n",
+    "composers2 = pd.read_excel('data/composers.xlsx', index_col='composer',sheet_name='Sheet4')\n",
     "composers2"
    ]
   },
@@ -1578,8 +1578,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "composers1 = pd.read_excel('Data/composers.xlsx', sheet_name='Sheet1')\n",
-    "composers2 = pd.read_excel('Data/composers.xlsx', sheet_name='Sheet6')"
+    "composers1 = pd.read_excel('data/composers.xlsx', sheet_name='Sheet1')\n",
+    "composers2 = pd.read_excel('data/composers.xlsx', sheet_name='Sheet6')"
    ]
   },
   {
